// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests calender Popper 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    customInput={
        <TextFieldPresenter
            hidePopper={false}
            id="text-field-67880"
            onClearButtonClick={[Function]}
            selected={"2017-09-15T13:30:00.000Z"}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    hidePopper={false}
    isClearable={false}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, -30px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  hidePopper={false}
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      hidePopper={false}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      hidePopper={false}
      selected={"2017-09-15T13:30:00.000Z"}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "hidePopper": false,
        "selected": "2017-09-15T13:30:00.000Z",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  hidePopper={false}
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      hidePopper={false}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    hidePopper={false}
    selected={"2017-09-15T13:30:00.000Z"}
/>,
}
`;

exports[`DatePicker Snapshot tests disabled view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    customInput={
        <TextFieldPresenter
            disabled={true}
            id="text-field-67880"
            onClearButtonClick={[Function]}
            selected={"2017-09-15T13:30:00.000Z"}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={true}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    isClearable={false}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, -30px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={true}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      disabled={true}
      selected={"2017-09-15T13:30:00.000Z"}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "disabled": true,
        "selected": "2017-09-15T13:30:00.000Z",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={true}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    disabled={true}
    selected={"2017-09-15T13:30:00.000Z"}
/>,
}
`;

exports[`DatePicker Snapshot tests portal view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    customInput={
        <TextFieldPresenter
            id="text-field-67880"
            onClearButtonClick={[Function]}
            selected={"2017-09-15T13:30:00.000Z"}
            showClearButton={undefined}
            type="text"
            withPortal={true}
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    isClearable={false}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, -30px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={true}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
                  withPortal={true}
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={true}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      selected={"2017-09-15T13:30:00.000Z"}
      withPortal={true}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "selected": "2017-09-15T13:30:00.000Z",
        "withPortal": true,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
                  withPortal={true}
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={true}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    selected={"2017-09-15T13:30:00.000Z"}
    withPortal={true}
/>,
}
`;

exports[`DatePicker Snapshot tests regular view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    customInput={
        <TextFieldPresenter
            id="text-field-67880"
            onClearButtonClick={[Function]}
            selected={"2017-09-15T13:30:00.000Z"}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    isClearable={false}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, -30px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      selected={"2017-09-15T13:30:00.000Z"}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "selected": "2017-09-15T13:30:00.000Z",
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      customInput={
            <TextFieldPresenter
                  id="text-field-67880"
                  onClearButtonClick={[Function]}
                  selected={"2017-09-15T13:30:00.000Z"}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      isClearable={false}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, -30px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    selected={"2017-09-15T13:30:00.000Z"}
/>,
}
`;
